[package]
name = "dd"
version = "0.1.0"
edition = "2024"

[lib]
name = "dd"
path = "src/lib.rs"

[[bin]]
name = "dd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
indicatif = "0.18.0"
rand = "0.9.2"
sysinfo = "0.37.2"
crossbeam = "0.8"

[target.'cfg(unix)'.dependencies]
block-devs = "0.1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "ioapiset", "winbase", "winnt"] }
